--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "@nextui-org/react": "^2.4.6",
         "@radix-ui/react-slot": "^1.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "framer-motion": "^11.3.21",
         "lucide-react": "^0.424.0",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7"
